--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,30 @@
 		</dependency>
 
 		<dependency>
+			<groupId>de.ovgu.dke.mocca</groupId>
+			<artifactId>mocca-core</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>de.ovgu.dke.glue</groupId>
+			<artifactId>glue-core</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>de.ovgu.dke.glue</groupId>
+			<artifactId>glue-xmpp</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
+
+		<dependency>
 			<groupId>de.ovgu.dke.cet</groupId>
 			<artifactId>cet-xmpp</artifactId>
 			<version>0.1.3-SNAPSHOT</version>
