--- a/pom.xml
+++ b/pom.xml
@@ -57,9 +57,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>de.ovgu.dke.glue</groupId>
-			<artifactId>glue-core</artifactId>
-			<version>0.2.0-SNAPSHOT</version>
+			<groupId>de.ovgu.dke.mocca</groupId>
+			<artifactId>mocca-daemon</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 
