Updated the xmpp.properties example.
git-svn-id: https://svn.dke-research.de/svn/hci/xmpp/trunk/Echo@132 877cf7fc-6040-4152-ad77-284d8c8eda15

--- a/src/main/config/xmpp.properties.example
+++ b/src/main/config/xmpp.properties.example
@@ -1,9 +1,7 @@
-de.ovgu.dke.cet.xmpp.server = Your Server Here
+de.ovgu.dke.glue.xmpp.server = Your Server Here
 
-de.ovgu.dke.cet.xmpp.user = Your Username Here
-de.ovgu.dke.cet.xmpp.pass = Your Password Here
-de.ovgu.dke.cet.xmpp.resource = Your Resource Name Here
+de.ovgu.dke.glue.xmpp.user = Your Username Here
+de.ovgu.dke.glue.xmpp.pass = Your Password Here
+de.ovgu.dke.glue.xmpp.resource = Your Resource Name Here
 
-de.ovgu.dke.cet.xmpp.compression = true
-
-de.ovgu.dke.cet.xmpp.daemon = de.ovgu.dke.xmpp.echo.EchoDaemon
+de.ovgu.dke.glue.xmpp.compression = true
