--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>de.ovgu.dke.glue</groupId>
 			<artifactId>glue-xmpp</artifactId>
-			<version>0.1.2</version>
+			<version>0.1.2-SNAPSHOT</version>
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
