Changed Version to 0.3.0-shaun-SNAPSHOT
git-svn-id: https://svn.dke-research.de/svn/hci/xmpp/branches/Echo_shaun_0.3.0@135 877cf7fc-6040-4152-ad77-284d8c8eda15

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.ovgu.dke.xmpp</groupId>
 	<artifactId>Echo</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.3.0-shaun-SNAPSHOT</version>
 
 	<build>
 		<plugins>
