--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>de.ovgu.dke.mocca</groupId>
 			<artifactId>mocca-core</artifactId>
-			<version>0.1.1</version>
+			<version>0.3.0-shaun-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>de.ovgu.dke.glue</groupId>
 			<artifactId>glue-xmpp</artifactId>
-			<version>0.1.2-SNAPSHOT</version>
+			<version>0.3.0-shaun-SNAPSHOT</version>
 			<scope>runtime</scope>
 			<optional>true</optional>
 		</dependency>
