--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 		<dependency>
 			<groupId>de.ovgu.dke.mocca</groupId>
 			<artifactId>mocca-daemon</artifactId>
-			<version>0.1.1</version>
+			<version>0.3.0-shaun-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 
